--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
 /target/
 
+# IntelliJ
+.idea
+
 ### Eclipse ###
 .metadata
 bin/
