--- a/pom.xml
+++ b/pom.xml
@@ -172,8 +172,20 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.12.5</version> 
 		</dependency>
-
-
+		
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.5</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.13.0</version>
+		</dependency>
 
 	</dependencies>
 	<build>
