--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,13 +46,13 @@
 	</filter-mapping>
 	
 	<!-- 찜목록에서 로그인 하지 않으면 다시 로그인 페이지로 보내기 위한 filter -->
-	<filter>
+<!-- 	<filter>
 		<filter-name>login</filter-name>
 			<filter-class>kr.ac.kopo.list.LoginFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>login</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 
 </web-app>
