--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,13 @@
 		    <version>2.13.0</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>6.2.0.Final</version>
+		</dependency>
+		
+		
 	</dependencies>
 	<build>
 		<plugins>
